--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <title>PRUEBA CCGROUP</title>
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-        <img src="Img/Logo (1).png" width="150px">
+        <img class="imgLogo" src="Img/Logo (1).png" width="150px">
+        <img class="imgIsotipo" src="Img/Isotipo (1).png" width="70px">
         </a>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item dropdown">
-            <a id="nav_redondo" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a id="nav_redondo" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Hogar
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" id="nav_redondo_lista" aria-labelledby="navbarDropdown1">
               <a class="dropdown-item" href="#">Mundo</a>
               <a class="dropdown-item" href="#">Hogar</a>
               <a class="dropdown-item" href="#">Muebles</a>
@@ -31,39 +39,39 @@
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a id="nav_redondo" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Tecnologia
+            <a id="nav_redondo" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Tecnología
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" id="nav_redondo_lista" aria-labelledby="navbarDropdown2">
               <a class="dropdown-item" href="#">Smartwatch</a>
-              <a class="dropdown-item" href="#">Audifonos</a>
+              <a class="dropdown-item" href="#">Audífonos</a>
               <a class="dropdown-item" href="#">Gamer</a>
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a id="nav_redondo" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a id="nav_redondo" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Deporte
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" id="nav_redondo_lista" aria-labelledby="navbarDropdown3">
               <a class="dropdown-item" href="#">Ropa</a>
               <a class="dropdown-item" href="#">Accesorios</a>
               <a class="dropdown-item" href="#">Training</a>
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a id="nav_redondo" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Electrodomesticos
+            <a id="nav_redondo" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Electrodomésticos
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" id="nav_redondo_lista" aria-labelledby="navbarDropdown4">
               <a class="dropdown-item" href="#">Cocina</a>
               <a class="dropdown-item" href="#">Pequeños</a>
-              <a class="dropdown-item" href="#">Electrodomesticos</a>
+              <a class="dropdown-item" href="#">Electrodomésticos</a>
             </div>
           </li>
         </ul>
       </div>
     </nav>
-    <section>
+    <section id="carousel_grande">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -91,16 +99,55 @@
         </a>
       </div>
     </section>
+    <section id="carousel_pequeño">
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="Img/banner/delivery Diciembre.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="Img/banner/Nueva navidad 360 x 391px..jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="Img/banner/Nuevos ingresos 360 x 391 px.jpg" alt="Third slide">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="img_carousel_pequeño">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active" style="padding: 50px;">
+            <img class="d-block w-100" src="Img/imagenes/Cuadros 1.png" alt="First slide">
+          </div>
+          <div class="carousel-item" style="padding: 50px;">
+            <img class="d-block w-100" src="Img/imagenes/Cuadros 2.png" alt="Second slide">
+          </div>
+          <div class="carousel-item" style="padding: 65px;">
+            <img class="d-block w-100" src="Img/imagenes/Cuadros 3.png" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      
+    </section>
+      
     <section class="cuadro_de_imagenes">
       <img src="Img/imagenes/Cuadros 1.png" alt="">
       <img src="Img/imagenes/Cuadros 2.png" alt="">
       <img src="Img/imagenes/Cuadros 3.png" alt="">
     </section>
-
-
-    <script src="script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
